--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,3 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+* {
+  font-family: "Inter", sans-serif;
+}
+
 button {
   background-color: aqua;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  background-color: #222;
+  color: #fff;
+}
+button:hover {
+  background-color: #000;
 }/*# sourceMappingURL=index.css.map */
