--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,8 +12,9 @@ button {
   font-size: 14px;
   background-color: #222;
   color: #fff;
+  cursor: pointer;
 
   &:hover {
-    background-color: #000;
+    background-color: #111;
   }
 }
