--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -15,6 +15,4 @@ button {
 }
 button:hover {
   background-color: #111;
-}
-
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
