--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -15,4 +15,6 @@ button {
 }
 button:hover {
   background-color: #111;
-}/*# sourceMappingURL=index.css.map */
+}
+
+/*# sourceMappingURL=index.css.map */
