correction of the colors

--- a/packages/core/sass/setting/colors/_colors.scss
+++ b/packages/core/sass/setting/colors/_colors.scss
@@ -1,8 +1,6 @@
 $--base-transparent: transparent;
 $--base-black: #000;
-$--base-white-fff: #000000;
-$--base-white-rgb: #000000;
-$--base-white-alpha: #000000;
+$--base-white: #fff;
 $--brand-koromiko: #fcb64d;
 $--brand-chiffon: #fefcb9;
 $--brand-beige: #fefce7;
